# mereja

./: .gitignore  LICENSE  README.md  main.py  requirements.txt  setup.cfg  setup.py
mereja/: __init__.py  constants.py  main.py  utils.py
mereja/functions/: __init__.py  forex.py  jobs.py  market.py  news.py  telebirr.py
mereja/ui/: __init__.py  forex_table_ui.py  job_view_ui.py  marketpalce_ui.py  news_view_ui.py  transaction_table.py
mereja/ui/widgets/: header.py
ui/: __init__.py
ui/widgets/: header.py
