[metadata]
name = mereja
version = 0.0.1
author = Kidus
author_email = wizkiye@gmail.com
description =
long_description = file: README.md
long_description_content_type = text/markdown
url =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.6

